@@ -12,6 +12,7 @@ Enhancements::
 * allow font settings to be specified per side of a running content periphery (#2316)
 * don't split code block that has less than breakable minimum lines (#2304)
 * allow theme to set minimum height of orphans for code blocks (#2304)
+* introduce `scale` theme key for admonition icon to scale down icon without affecting layout (#2318)
 
 == 2.3.0 (2022-08-16) - @mojavelinux
 
